# SimpleCPPWebServer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: server.h  serverCommon.h  serverString.h  serverTime.h
src/: serverString.cpp  serverTime.cpp
test/: testServerString.cpp  testServerTime.cpp
